# tinman_sandbox

./: CMakeLists.txt  README  config.h.in  derivative_mod_base.F90  element_mod.F90  hybvcoord_mod.F90  makeit.sh  physical_constants.F90
cmake/: SetCompilerFlags.cmake  do-configure.sh
compute_and_apply_rhs_test/: CMakeLists.txt  config.h.in
compute_and_apply_rhs_test/cxx/: CMakeLists.txt  compute_and_apply_rhs.cpp  data_structures.hpp  dimensions.hpp  main.cpp  sphere_operators.cpp
compute_and_apply_rhs_test/cxx/basic/: CMakeLists.txt  compute_and_apply_rhs.cpp  data_structures.cpp  data_structures.hpp  main.cpp  sphere_operators.cpp  test_macros.hpp
compute_and_apply_rhs_test/cxx/kokkos_basic/: CMakeLists.txt  Makefile  Makefile.custom.in  Region.cpp  Region.hpp  TestData.cpp  TestData.hpp  Types.hpp  compute_and_apply_rhs.cpp  compute_and_apply_rhs.hpp  config.h  dimensions.hpp  main.cpp  sphere_operators.cpp  sphere_operators.hpp  timer.cpp
compute_and_apply_rhs_test/cxx/kokkos_scratch/: CMakeLists.txt  Dimensions.hpp  Makefile.custom.in  Region.cpp  Region.hpp  ScratchManager.hpp  ScratchMemoryDefs.hpp  ScratchStack.hpp  TestData.cpp  TestData.hpp  Types.hpp  compute_and_apply_rhs.cpp  compute_and_apply_rhs.hpp  config.h  config.h.in  helpers.hpp  main.cpp  sphere_operators.hpp  timer.cpp
compute_and_apply_rhs_test/cxx/level_vectorized_ppscan/: CMakeLists.txt  CaarFunctor.hpp  Dimensions.hpp  Elements.cpp  ExecSpaceDefs.hpp  Types.hpp  Utility.hpp  kokkos_init.cpp  profiling.hpp
compute_and_apply_rhs_test/cxx/level_vectorized_ppscan/gptl/: gptl.c
compute_and_apply_rhs_test/cxx/level_vectorized_ppscan/vector/: KokkosKernels_Vector_SIMD.hpp
compute_and_apply_rhs_test/cxx/pointers_only/: CMakeLists.txt  compute_and_apply_rhs.cpp  compute_and_apply_rhs.hpp  data_structures.cpp  data_structures.hpp  dimensions.hpp  main.cpp  sphere_operators.cpp  sphere_operators.hpp  test_macros.hpp
compute_and_apply_rhs_test/cxx/tiled_vectorized_ppscan/: CMakeLists.txt  CaarFunctor.hpp  Dimensions.hpp  Types.hpp  config.h.in  kokkos_init.cpp  profiling.hpp
compute_and_apply_rhs_test/fortran/: CMakeLists.txt  config1.h  config2.h  config3.h  config4.h  coordinate_systems_mod.F90  derivative_mod_base.F90  dimensions_mod.F90  element_mod.F90  element_state_mod.F90  gfortran.sh  hybvcoord_mod.F90  intel.sh  kinds.F90  main-original.F90  main-simplified.F90  main.F90  my-intel.sh  my-simple.sh  my.sh  physical_constants.F90  results_mod.F90  routine_extracted.F90  routine_mod.F90  routine_mod_ST.F90  routine_st_fused.F90  routine_vert_int_scaled.F90  scaling.sh  test_mod.F90  utils_mod.F90
cxx/: CMakeLists.txt  compute_and_apply_rhs.cpp  compute_and_apply_rhs.hpp  data_structures.cpp  data_structures.hpp  kinds.hpp  main.cpp  sphere_operators.cpp  test_macros.hpp
fortran/: CMakeLists.txt  dimensions_mod.F90  element_mod.F90  kinds.F90  main.F90  routine_mod.F90
performance/: nvprof.lsf  perf_test.lsf  plot_results.py
saxpby_test/: config.h.in
saxpby_test/cpp/: main.cpp
saxpby_test/cxx/: CMakeLists.txt  common.cpp  common.hpp  main.cpp
saxpby_test/fortran/: CMakeLists.txt  loop_bounds.F90  loop_test.F90  main.F90
