CMAKE_MINIMUM_REQUIRED(VERSION 2.8.5)

SET (CMAKE_BUILD_TYPE "RELEASE" CACHE STRING "Select build type.")

PROJECT (TinMan Fortran C CXX)

STRING(TOUPPER ${CMAKE_BUILD_TYPE} BUILD_TYPE_UPPER)
IF (${CMAKE_BUILD_TYPE} MATCHES ${BUILD_TYPE_UPPER})
  ADD_DEFINITIONS (-DTINMAN_DEBUG)
ENDIF()

SET (CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/cmake")

IF("${KOKKOS_PATH}" STREQUAL "")
  MESSAGE(ABORT "No Kokkos installation specified, define KOKKOS_PATH")
ENDIF()

OPTION(CUDA_BUILD "Whether CUDA is being targetted or not")

IF(${CUDA_BUILD})
  ADD_DEFINITIONS(-DCUDA_BUILD)
  MESSAGE("Building for CUDA")
ENDIF()

OPTION(USE_HWLOC "Whether hwloc is being used or not. May be required by Kokkos")

IF(${USE_HWLOC})
  MESSAGE("Linking to hwloc")
ENDIF()

INCLUDE (SetCompilerFlags)

ADD_SUBDIRECTORY (compute_and_apply_rhs_test)
ADD_SUBDIRECTORY (saxpby_test)
