CMAKE_MINIMUM_REQUIRED(VERSION 2.8.5)

SET (CMAKE_BUILD_TYPE "RELEASE" CACHE STRING "Select build type.")

PROJECT (TinMan Fortran C CXX)

STRING(TOUPPER ${CMAKE_BUILD_TYPE} BUILD_TYPE_UPPER)
IF (${CMAKE_BUILD_TYPE} MATCHES ${BUILD_TYPE_UPPER})
  ADD_DEFINITIONS (-DTINMAN_DEBUG)
ENDIF()

SET (CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/cmake")

IF("${KOKKOS_PATH}" STREQUAL "")
  MESSAGE(ABORT "No Kokkos installation specified, define KOKKOS_PATH")
ENDIF()

OPTION(CUDA_BUILD "Whether CUDA is being targetted or not")

IF(${CUDA_BUILD})
  ADD_DEFINITIONS(-DCUDA_BUILD)
  MESSAGE("Building for CUDA")
ENDIF()

OPTION(HWLOC_BASE_DIR     "Root directory where hwloc is installed")
OPTION(HWLOC_INCLUDE_DIRS "Directory where hwloc headers are installed")
OPTION(HWLOC_LIBRARY_DIRS "Directory where hwloc libraries are installed")

IF(HWLOC_BASE_DIR)
  SET (HWLOC_INCLUDE_DIRS "${HWLOC_BASE_DIR}/include")
  SET (HWLOC_LIBRARY_DIRS "${HWLOC_BASE_DIR}/lib")
ENDIF()

INCLUDE (SetCompilerFlags)

ADD_SUBDIRECTORY (compute_and_apply_rhs_test)
ADD_SUBDIRECTORY (saxpby_test)
