MESSAGE (STATUS "Building f90_vs_cxx_test (f90 version)")

SET (EXEC_MODULE_DIR "${CMAKE_CURRENT_BINARY_DIR}/modules")

SET (SOURCES
  coordinate_systems_mod.F90
  element_state_mod.F90
  hybvcoord_mod.F90
  kinds.F90
  physical_constants.F90
  test_mod.F90
  utils_mod.F90
)

# Compile all the above just once (Note: 'caar' stands for 'Compute And Apply Rhs')
ADD_LIBRARY (caarlib ${SOURCES})
SET_TARGET_PROPERTIES (caarlib PROPERTIES Fortran_MODULE_DIRECTORY ${EXEC_MODULE_DIR}/caarlib)

CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/config1.h config1.h)
CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/config2.h config2.h)
CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/config3.h config3.h)
CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/config4.h config4.h)

INCLUDE_DIRECTORIES (${CMAKE_CURRENT_BINARY_DIR})
INCLUDE_DIRECTORIES (${EXEC_MODULE_DIR}/caarlib)

# Original version (with and without openmp)
ADD_EXECUTABLE (orig main.F90 routine_mod.F90 element_mod.F90 derivative_mod_base.F90)
SET_TARGET_PROPERTIES (orig PROPERTIES LINKER_LANGUAGE Fortran)
SET_TARGET_PROPERTIES (orig PROPERTIES Fortran_MODULE_DIRECTORY ${EXEC_MODULE_DIR}/orig)
TARGET_INCLUDE_DIRECTORIES(orig PUBLIC ${EXEC_MODULE_DIR}/orig)
TARGET_LINK_LIBRARIES (orig caarlib rt)
TARGET_COMPILE_DEFINITIONS(orig PUBLIC -DORIG=1)

ADD_EXECUTABLE (origomp main.F90 routine_mod.F90 element_mod.F90 derivative_mod_base.F90)
SET_TARGET_PROPERTIES (origomp PROPERTIES LINKER_LANGUAGE Fortran)
SET_TARGET_PROPERTIES (origomp PROPERTIES Fortran_MODULE_DIRECTORY ${EXEC_MODULE_DIR}/origomp)
TARGET_INCLUDE_DIRECTORIES(origomp PUBLIC ${EXEC_MODULE_DIR}/origomp)
TARGET_LINK_LIBRARIES (origomp caarlib rt)
TARGET_COMPILE_DEFINITIONS(origomp PUBLIC -DORIG=1 -DHOMP=1)

# All new versions (without openmp)
ADD_EXECUTABLE (s1 main.F90 routine_mod_ST.F90 element_mod.F90 derivative_mod_base.F90)
SET_TARGET_PROPERTIES (s1 PROPERTIES LINKER_LANGUAGE Fortran)
SET_TARGET_PROPERTIES (s1 PROPERTIES Fortran_MODULE_DIRECTORY ${EXEC_MODULE_DIR}/s1)
TARGET_INCLUDE_DIRECTORIES(s1 PUBLIC ${EXEC_MODULE_DIR}/s1)
TARGET_LINK_LIBRARIES (s1 caarlib rt)
TARGET_COMPILE_DEFINITIONS(s1 PUBLIC -DSTVER1=1)

ADD_EXECUTABLE (s2 main.F90 routine_mod_ST.F90 element_mod.F90 derivative_mod_base.F90)
SET_TARGET_PROPERTIES (s2 PROPERTIES LINKER_LANGUAGE Fortran)
SET_TARGET_PROPERTIES (s2 PROPERTIES Fortran_MODULE_DIRECTORY ${EXEC_MODULE_DIR}/s2)
TARGET_INCLUDE_DIRECTORIES(s2 PUBLIC ${EXEC_MODULE_DIR}/s2)
TARGET_LINK_LIBRARIES (s2 caarlib rt)
TARGET_COMPILE_DEFINITIONS(s2 PUBLIC -DSTVER2=1)

ADD_EXECUTABLE (s3 main.F90 routine_mod_ST.F90 element_mod.F90 derivative_mod_base.F90)
SET_TARGET_PROPERTIES (s3 PROPERTIES LINKER_LANGUAGE Fortran)
SET_TARGET_PROPERTIES (s3 PROPERTIES Fortran_MODULE_DIRECTORY ${EXEC_MODULE_DIR}/s3)
TARGET_INCLUDE_DIRECTORIES(s3 PUBLIC ${EXEC_MODULE_DIR}/s3)
TARGET_LINK_LIBRARIES (s3 caarlib rt)
TARGET_COMPILE_DEFINITIONS(s3 PUBLIC -DSTVER3=1)

ADD_EXECUTABLE (s4 main.F90 routine_mod_ST.F90 element_mod.F90 derivative_mod_base.F90)
SET_TARGET_PROPERTIES (s4 PROPERTIES LINKER_LANGUAGE Fortran)
SET_TARGET_PROPERTIES (s4 PROPERTIES Fortran_MODULE_DIRECTORY ${EXEC_MODULE_DIR}/s4)
TARGET_INCLUDE_DIRECTORIES(s4 PUBLIC ${EXEC_MODULE_DIR}/s4)
TARGET_LINK_LIBRARIES (s4 caarlib rt)
TARGET_COMPILE_DEFINITIONS(s4 PUBLIC -DSTVER4=1)

# All new versions (with openmp)
ADD_EXECUTABLE (s1omp main.F90 routine_mod_ST.F90 element_mod.F90 derivative_mod_base.F90)
SET_TARGET_PROPERTIES (s1omp PROPERTIES LINKER_LANGUAGE Fortran)
SET_TARGET_PROPERTIES (s1omp PROPERTIES Fortran_MODULE_DIRECTORY ${EXEC_MODULE_DIR}/s1omp)
TARGET_INCLUDE_DIRECTORIES(s1omp PUBLIC ${EXEC_MODULE_DIR}/s1omp)
TARGET_LINK_LIBRARIES (s1omp caarlib rt)
TARGET_COMPILE_DEFINITIONS(s1omp PUBLIC -DHOMP=1 -DSTVER1=1)

ADD_EXECUTABLE (s2omp main.F90 routine_mod_ST.F90 element_mod.F90 derivative_mod_base.F90)
SET_TARGET_PROPERTIES (s2omp PROPERTIES LINKER_LANGUAGE Fortran)
SET_TARGET_PROPERTIES (s2omp PROPERTIES Fortran_MODULE_DIRECTORY ${EXEC_MODULE_DIR}/s2omp)
TARGET_INCLUDE_DIRECTORIES(s2omp PUBLIC ${EXEC_MODULE_DIR}/s2omp)
TARGET_LINK_LIBRARIES (s2omp caarlib rt)
TARGET_COMPILE_DEFINITIONS(s2omp PUBLIC -DHOMP=1 -DSTVER2=1)

ADD_EXECUTABLE (s3omp main.F90 routine_mod_ST.F90 element_mod.F90 derivative_mod_base.F90)
SET_TARGET_PROPERTIES (s3omp PROPERTIES LINKER_LANGUAGE Fortran)
SET_TARGET_PROPERTIES (s3omp PROPERTIES Fortran_MODULE_DIRECTORY ${EXEC_MODULE_DIR}/s3omp)
TARGET_INCLUDE_DIRECTORIES(s3omp PUBLIC ${EXEC_MODULE_DIR}/s3omp)
TARGET_LINK_LIBRARIES (s3omp caarlib rt)
TARGET_COMPILE_DEFINITIONS(s3omp PUBLIC -DHOMP=1 -DSTVER3=1)

ADD_EXECUTABLE (s4omp main.F90 routine_mod_ST.F90 element_mod.F90 derivative_mod_base.F90)
SET_TARGET_PROPERTIES (s4omp PROPERTIES LINKER_LANGUAGE Fortran)
SET_TARGET_PROPERTIES (s4omp PROPERTIES Fortran_MODULE_DIRECTORY ${EXEC_MODULE_DIR}/s4omp)
TARGET_INCLUDE_DIRECTORIES(s4omp PUBLIC ${EXEC_MODULE_DIR}/s4omp)
TARGET_LINK_LIBRARIES (s4omp caarlib rt)
TARGET_COMPILE_DEFINITIONS(s4omp PUBLIC -DHOMP=1 -DSTVER4=1)

# All new versions (fused with openmp)
ADD_EXECUTABLE (fs1omp main.F90 routine_st_fused.F90 element_mod.F90 derivative_mod_base.F90)
SET_TARGET_PROPERTIES (fs1omp PROPERTIES LINKER_LANGUAGE Fortran)
SET_TARGET_PROPERTIES (fs1omp PROPERTIES Fortran_MODULE_DIRECTORY ${EXEC_MODULE_DIR}/fs1omp)
TARGET_INCLUDE_DIRECTORIES(fs1omp PUBLIC ${EXEC_MODULE_DIR}/fs1omp)
TARGET_LINK_LIBRARIES (fs1omp caarlib rt)
TARGET_COMPILE_DEFINITIONS(fs1omp PUBLIC -DHOMP=1 -DSTVER1=1)

ADD_EXECUTABLE (fs2omp main.F90 routine_st_fused.F90 element_mod.F90 derivative_mod_base.F90)
SET_TARGET_PROPERTIES (fs2omp PROPERTIES LINKER_LANGUAGE Fortran)
SET_TARGET_PROPERTIES (fs2omp PROPERTIES Fortran_MODULE_DIRECTORY ${EXEC_MODULE_DIR}/fs2omp)
TARGET_INCLUDE_DIRECTORIES(fs2omp PUBLIC ${EXEC_MODULE_DIR}/fs2omp)
TARGET_LINK_LIBRARIES (fs2omp caarlib rt)
TARGET_COMPILE_DEFINITIONS(fs2omp PUBLIC -DHOMP=1 -DSTVER2=1)

ADD_EXECUTABLE (fs3omp main.F90 routine_st_fused.F90 element_mod.F90 derivative_mod_base.F90)
SET_TARGET_PROPERTIES (fs3omp PROPERTIES LINKER_LANGUAGE Fortran)
SET_TARGET_PROPERTIES (fs3omp PROPERTIES Fortran_MODULE_DIRECTORY ${EXEC_MODULE_DIR}/fs3omp)
TARGET_INCLUDE_DIRECTORIES(fs3omp PUBLIC ${EXEC_MODULE_DIR}/fs3omp)
TARGET_LINK_LIBRARIES (fs3omp caarlib rt)
TARGET_COMPILE_DEFINITIONS(fs3omp PUBLIC -DHOMP=1 -DSTVER3=1)

ADD_EXECUTABLE (fs4omp main.F90 routine_st_fused.F90 element_mod.F90 derivative_mod_base.F90)
SET_TARGET_PROPERTIES (fs4omp PROPERTIES LINKER_LANGUAGE Fortran)
SET_TARGET_PROPERTIES (fs4omp PROPERTIES Fortran_MODULE_DIRECTORY ${EXEC_MODULE_DIR}/fs4omp)
TARGET_INCLUDE_DIRECTORIES(fs4omp PUBLIC ${EXEC_MODULE_DIR}/fs4omp)
TARGET_LINK_LIBRARIES (fs4omp caarlib rt)
TARGET_COMPILE_DEFINITIONS(fs4omp PUBLIC -DHOMP=1 -DSTVER4=1)

# All new versions (fused with horizontal openmp)
ADD_EXECUTABLE (fs1omp.h main.F90 routine_st_fused.F90 element_mod.F90 derivative_mod_base.F90)
SET_TARGET_PROPERTIES (fs1omp.h PROPERTIES LINKER_LANGUAGE Fortran)
SET_TARGET_PROPERTIES (fs1omp.h PROPERTIES Fortran_MODULE_DIRECTORY ${EXEC_MODULE_DIR}/fs1omp)
TARGET_INCLUDE_DIRECTORIES(fs1omp.h PUBLIC ${EXEC_MODULE_DIR}/fs1omp)
TARGET_LINK_LIBRARIES (fs1omp.h caarlib rt)
TARGET_COMPILE_DEFINITIONS(fs1omp.h PUBLIC -DHOMP=0 -DSTVER1=1)
TARGET_COMPILE_OPTIONS(fs1omp.h PUBLIC -g)

ADD_EXECUTABLE (fs2omp.h main.F90 routine_st_fused.F90 element_mod.F90 derivative_mod_base.F90)
SET_TARGET_PROPERTIES (fs2omp.h PROPERTIES LINKER_LANGUAGE Fortran)
SET_TARGET_PROPERTIES (fs2omp.h PROPERTIES Fortran_MODULE_DIRECTORY ${EXEC_MODULE_DIR}/fs2omp)
TARGET_INCLUDE_DIRECTORIES(fs2omp.h PUBLIC ${EXEC_MODULE_DIR}/fs2omp)
TARGET_LINK_LIBRARIES (fs2omp.h caarlib rt)
TARGET_COMPILE_DEFINITIONS(fs2omp.h PUBLIC -DHOMP=0 -DSTVER2=1)
TARGET_COMPILE_OPTIONS(fs2omp.h PUBLIC -g)

ADD_EXECUTABLE (fs3omp.h main.F90 routine_st_fused.F90 element_mod.F90 derivative_mod_base.F90)
SET_TARGET_PROPERTIES (fs3omp.h PROPERTIES LINKER_LANGUAGE Fortran)
SET_TARGET_PROPERTIES (fs3omp.h PROPERTIES Fortran_MODULE_DIRECTORY ${EXEC_MODULE_DIR}/fs3omp)
TARGET_INCLUDE_DIRECTORIES(fs3omp.h PUBLIC ${EXEC_MODULE_DIR}/fs3omp)
TARGET_LINK_LIBRARIES (fs3omp.h caarlib rt)
TARGET_COMPILE_DEFINITIONS(fs3omp.h PUBLIC -DHOMP=0 -DSTVER3=1)
TARGET_COMPILE_OPTIONS(fs3omp.h PUBLIC -g)

ADD_EXECUTABLE (fs4omp.h main.F90 routine_st_fused.F90 element_mod.F90 derivative_mod_base.F90)
SET_TARGET_PROPERTIES (fs4omp.h PROPERTIES LINKER_LANGUAGE Fortran)
SET_TARGET_PROPERTIES (fs4omp.h PROPERTIES Fortran_MODULE_DIRECTORY ${EXEC_MODULE_DIR}/fs4omp)
TARGET_INCLUDE_DIRECTORIES(fs4omp.h PUBLIC ${EXEC_MODULE_DIR}/fs4omp)
TARGET_LINK_LIBRARIES (fs4omp.h caarlib rt)
TARGET_COMPILE_DEFINITIONS(fs4omp.h PUBLIC -DHOMP=0 -DSTVER4=1)
TARGET_COMPILE_OPTIONS(fs4omp.h PUBLIC -g)

