INCLUDE_DIRECTORIES (${KOKKOS_PATH}/include)

SET (TINMAN_EXEC_SPACE "Default" CACHE STRING "Select the kokkos exec space")

STRING (TOUPPER ${TINMAN_EXEC_SPACE} TINMAN_EXEC_SPACE_UPPER)
IF (${TINMAN_EXEC_SPACE_UPPER} STREQUAL "CUDA")
  SET (TINMAN_CUDA_SPACE ON)
ELSEIF (${TINMAN_EXEC_SPACE_UPPER} STREQUAL "OPENMP")
  SET (TINMAN_OPENMP_SPACE ON)
ELSEIF (${TINMAN_EXEC_SPACE_UPPER} STREQUAL "THREADS")
  SET (TINMAN_THREADS_SPACE ON)
ELSEIF (${TINMAN_EXEC_SPACE_UPPER} STREQUAL "SERIAL")
  SET (TINMAN_SERIAL_SPACE ON)
ELSEIF (${TINMAN_EXEC_SPACE_UPPER} STREQUAL "DEFAULT")
  SET (TINMAN_DEFAULT_SPACE ON)
ELSE()
  MESSAGE (ABORT "Invalid choice for 'TINMAN_EXEC_SPACE'. Valid options (case insensitive) are 'Cuda', 'OpenMP', 'Threads', 'Serial', 'Default'")
ENDIF()

SET(TEST_SRCS
  main.cpp
  compute_and_apply_rhs.cpp
  timer.cpp
  Region.cpp
  TestData.cpp
)

INCLUDE_DIRECTORIES (${CMAKE_CURRENT_BINARY_DIR})

CONFIGURE_FILE (${CMAKE_CURRENT_SOURCE_DIR}/config.h.in ${CMAKE_CURRENT_BINARY_DIR}/config.h)
ADD_EXECUTABLE(kokkos-scratch ${TEST_SRCS})

IF(${CUDA_BUILD})
  TARGET_COMPILE_OPTIONS(kokkos-scratch PUBLIC -expt-extended-lambda)
ENDIF()

IF (KOKKOS_CMAKE_BUILD)
  SET(Kokkos_LIBRARIES "kokkoscore")
ELSE()
  SET(Kokkos_LIBRARIES "kokkos")
ENDIF()

TARGET_LINK_LIBRARIES(kokkos-scratch ${Kokkos_LIBRARIES} -L${KOKKOS_PATH}/lib)
IF (HWLOC_LIBRARY_DIRS)
  TARGET_LINK_LIBRARIES(kokkos-scratch hwloc -L${HWLOC_LIBRARY_DIRS})
ENDIF()

SET_TARGET_PROPERTIES(kokkos-scratch PROPERTIES LINKER_LANGUAGE CXX)
